[gd_scene load_steps=13 format=2]

[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/DetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/EnemyBody.gd" type="Script" id=4]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Pixels.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=9]
[ext_resource path="res://droppedItems/droppedCoins.tscn" type="PackedScene" id=10]
[ext_resource path="res://droppedItems/droppedHeart.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 9 )

[node name="Position2D" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Position2D"]

[node name="Level" type="Label" parent="Position2D/Control"]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 1 )
text = "Lvl: 1"
align = 1

[node name="Body" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 3
script = ExtResource( 4 )
hearts = ExtResource( 11 )
coins = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]

[node name="DetectionZone" parent="Body" instance=ExtResource( 2 )]
collision_mask = 2

[node name="Hitbox" parent="Body" instance=ExtResource( 3 )]
collision_mask = 4

[node name="Hurtbox" parent="Body" instance=ExtResource( 1 )]
collision_layer = 16

[node name="SoftCollision" parent="Body" instance=ExtResource( 5 )]

[node name="WanderController" parent="Body" instance=ExtResource( 7 )]

[node name="Stats" parent="Body" instance=ExtResource( 6 )]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Body"]
remote_path = NodePath("../../Position2D")
update_rotation = false

[connection signal="area_entered" from="Body/Hurtbox" to="Body" method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Body/Stats" to="Body" method="_on_Stats_no_health"]
